tests/error/comptime/pointer_arithmetic16.bz
// error: invalid pointer arithmetic operation with type '*i32' and offset -1
// note: while evaluating expression at compile time
// note: address points to an element at index 0 in an array of size 5 in this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let a = [[5: i32], [5: i32]]();
		&a[1, 0] + 5 - 5 - 1;
	});
}
